--- a/demo/index.jade
+++ b/demo/index.jade
@@ -4,65 +4,70 @@
 doctype html
 html(lang="en")
    head
+      meta(charset="UTF-8")
       title Weather Report
-      link(rel="styleSheet" type="text/css" href="../bower_components/bootstrap/dist/css/bootstrap.css")
-   .container
-      .row
-         .btn-group
-            button.btn.btn-default.dropdown-toggle(type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
-               | Action
-               span.caret
-            ul.dropdown-menu
-               li
-                  a(href='#') 北京
-               li
-                  a(href='#') 上海
-               li
-                  a(href='#') 深圳
-               li
-                  a(href='#') 长沙
-               li
-                  a(href='#') 南京
-            button.btn.btn-success 查询
-         table.table-bordered
-            tr
-               th 日期
-               th 最高气温
-               th 最低气温
-               th 天气
-            tr
-               td
-               td
-               td
-               td
-            tr
-               td
-               td
-               td
-               td
-            tr
-               td
-               td
-               td
-               td
-            tr
-               td
-               td
-               td
-               td
-            tr
-               td
-               td
-               td
-               td
-            tr
-               td
-               td
-               td
-               td
-            tr
-               td
-               td
-               td
-               td
+      link(rel="styleSheet" href="../bower_components/bootstrap/dist/css/bootstrap.css")
 
+   .container
+      .container-fluid
+         .row(style="padding:100px;")
+            .dropdown(style="margin-bottom:20px;")
+               button.btn.btn-default.dropdown-toggle(type='button',data-toggle='dropdown',aria-haspopup='true',aria-expanded='false')
+                  | 上海
+                  span.caret
+               ul.dropdown-menu
+                  li
+                     a(href='#') 北京
+                  li
+                     a(href='#') 上海
+                  li
+                     a(href='#') 深圳
+                  li
+                     a(href='#') 长沙
+                  li
+                     a(href='#') 南京
+               button.btn.btn-success(style="float: right;") 查询
+            table.table.table-bordered
+               tr
+                  th 日期
+                  th 最高气温
+                  th 最低气温
+                  th 天气
+               tr
+                  td
+                  td
+                  td
+                  td
+               tr
+                  td
+                  td
+                  td
+                  td
+               tr
+                  td
+                  td
+                  td
+                  td
+               tr
+                  td
+                  td
+                  td
+                  td
+               tr
+                  td
+                  td
+                  td
+                  td
+               tr
+                  td
+                  td
+                  td
+                  td
+               tr
+                  td
+                  td
+                  td
+                  td
+
+      script(src="../bower_components/jquery/dist/jquery.js")
+      script(src="../bower_components/bootstrap/dist/js/bootstrap.js")
